# psplash

./: meson.build  meson_options.txt  psplash-colors.h  psplash-config.h  psplash.c
debian/: changelog  control  rules
systemd/: psplash-start.service
